--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -2,7 +2,7 @@
 # https://htmlpreview.github.io/?https://github.com/conformal/spectrwm/blob/master/spectrwm.html
 # NOTE: all rgb color values in this file are in hex! see XQueryColor for examples
 
-workspace_limit	                            = 6
+workspace_limit	                            = 7
 focus_mode  		                        = follow
 # focus_close		                        = previous
 # focus_close_wrap	                        = 1
@@ -75,12 +75,13 @@ region		                                = screen[1]:1920x1080+1920+0
 # layout		                            = ws[5]:0:0:0:0:horizontal_flip
 
 ####### Set workspace name at start #######
-name			                            = ws[1]:Browse
+name			                            = ws[1]:WWW
 name			                            = ws[2]:Edit
 name                                        = ws[3]:Term
 name			                            = ws[4]:Files
-name			                            = ws[5]:Graphic
-name                                        = ws[6]:Other
+name			                            = ws[5]:GFX
+name                                        = ws[6]:Esc
+name                                        = ws[7]:Ctrl
 
 # Mod key
 modkey                                      = Mod4
@@ -119,7 +120,7 @@ program[scrnrec]                            = simplescreenrecorder
 program[htop]                               = kitty htop
 program[floaterm]                           = kitty --name Floaterm
 program[git]                                = gitkraken
-
+program[cadence]                            = cadence
 ####### Key bindings #######
 ## Launchers
 
@@ -140,6 +141,7 @@ bind[screenshot_all]	                    = MOD+Print
 bind[screenshot_gui]   	                    = MOD+p
 bind[term]		                            = MOD+Return
 bind[carla]                                 = MOD+j
+bind[cadence]                               = MOD+v
 bind[paper]                                 = MOD+u
 
 
@@ -181,12 +183,14 @@ bind[mvws_3]		                        = MOD+Shift+3
 bind[mvws_4]		                        = MOD+Shift+4
 bind[mvws_5]		                        = MOD+Shift+5
 bind[mvws_6]		                        = MOD+Shift+6
+bind[mvws_7]		                        = MOD+Shift+7
 bind[ws_1]		                            = MOD+1
 bind[ws_2]		                            = MOD+2
 bind[ws_3]		                            = MOD+3
 bind[ws_4]		                            = MOD+4
 bind[ws_5]		                            = MOD+5
 bind[ws_6]		                            = MOD+6
+bind[ws_7]		                            = MOD+7
 bind[ws_next]		                        = MOD+Right
 bind[ws_next_all]	                        = MOD+Up
 bind[ws_next_move]	                        = MOD+Shift+Up
